[component.design] Перенес часть ресурсов в модуль с дизайном

--- a/app/src/main/res/drawable-v24/divider_horizontal.xml
+++ b/app/src/main/res/drawable-v24/divider_horizontal.xml
@@ -5,7 +5,7 @@
 
 	<gradient
 		android:angle="90"
-		android:endColor="@color/dividerShadow"
-		android:centerColor="@color/divider"
-		android:startColor="@color/divider" />
+		android:endColor="@color/dividerShadowColor"
+		android:centerColor="@color/dividerMainColor"
+		android:startColor="@color/dividerMainColor" />
 </shape>
