--- a/app/src/main/res/layout/item_wish.xml
+++ b/app/src/main/res/layout/item_wish.xml
@@ -10,7 +10,7 @@
 		android:id="@+id/marker"
 		android:layout_width="8dp"
 		android:layout_height="0dp"
-		android:background="@color/myata"
+		android:background="@color/colorMint"
 		app:layout_constraintBottom_toBottomOf="parent"
 		app:layout_constraintStart_toStartOf="parent"
 		app:layout_constraintTop_toTopOf="parent" />
