--- a/feature.wishes/src/main/res/layout/wish_edit_fragment.xml
+++ b/feature.wishes/src/main/res/layout/wish_edit_fragment.xml
@@ -64,7 +64,7 @@
 		android:layout_height="wrap_content"
 		android:layout_marginStart="16dp"
 		android:layout_marginTop="16dp"
-		android:text="Основная информация"
+		android:text="Детали"
 		app:layout_constraintStart_toStartOf="parent"
 		app:layout_constraintTop_toBottomOf="@id/input_info_layout" />
 
