--- a/feature.navigation/src/main/res/layout/activity_appbar.xml
+++ b/feature.navigation/src/main/res/layout/activity_appbar.xml
@@ -23,7 +23,7 @@
 	</com.google.android.material.appbar.AppBarLayout>
 
 	<FrameLayout
-		android:id="@+id/fragment"
+		android:id="@+id/content"
 		android:layout_width="0dp"
 		android:layout_height="0dp"
 		app:layout_constraintBottom_toBottomOf="parent"
