--- a/feature.wishes/src/main/res/layout/bottom_sheet.xml
+++ b/feature.wishes/src/main/res/layout/bottom_sheet.xml
@@ -1,9 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
+	xmlns:tools="http://schemas.android.com/tools"
 	style="@style/Theme.MaterialComponents.BottomSheetDialog"
 	android:layout_width="match_parent"
 	android:layout_height="wrap_content">
+
+	<TextView
+		android:id="@+id/wish_name"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_marginTop="16dp"
+		android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
+		app:layout_constraintEnd_toEndOf="parent"
+		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintTop_toTopOf="parent"
+		tools:text="Крутое пожелание" />
+
+	<View
+		android:id="@+id/divider"
+		android:layout_width="match_parent"
+		android:layout_height="1dp"
+		android:layout_marginTop="16dp"
+		android:background="@color/dividerShadowColor"
+		app:layout_constraintTop_toBottomOf="@+id/wish_name" />
 
 	<com.google.android.material.button.MaterialButton
 		android:id="@+id/edit"
@@ -11,7 +31,7 @@
 		android:text="Изменить"
 		app:icon="@drawable/create_24px"
 		app:layout_constraintStart_toStartOf="parent"
-		app:layout_constraintTop_toTopOf="parent" />
+		app:layout_constraintTop_toBottomOf="@+id/divider" />
 
 	<com.google.android.material.button.MaterialButton
 		android:id="@+id/complete"
