--- a/feature.wishes/src/main/res/layout/wish_fragment_list.xml
+++ b/feature.wishes/src/main/res/layout/wish_fragment_list.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
-	android:id="@+id/root"
+	android:id="@+id/fragment_root"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent">
 
@@ -21,4 +21,4 @@
 		app:elevation="6dp"
 		app:tint="#EEE" />
 
-</FrameLayout>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
