[feature-wishes] Немного поправил дизайн

--- a/component.design/src/main/res/values/colors.xml
+++ b/component.design/src/main/res/values/colors.xml
@@ -12,7 +12,7 @@
 
 	<color name="titleColor">#DDD</color>
 
-	<color name="dividerMainColor">#DDD</color>
+	<color name="dividerMainColor">#EEE</color>
 	<color name="dividerShadowColor">#AAA</color>
 
 	<color name="colorMint">#8BDABE</color>
