--- a/feature.stub/src/main/res/layout/stub_fragment.xml
+++ b/feature.stub/src/main/res/layout/stub_fragment.xml
@@ -52,7 +52,7 @@
 	<Button
 		android:id="@+id/secondaryButton"
 		style="@style/Widget.MaterialComponents.Button.OutlinedButton"
-		android:layout_width="0dp"
+		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:layout_marginStart="16dp"
 		android:layout_marginTop="8dp"
@@ -66,7 +66,7 @@
 	<Button
 		android:id="@+id/mainButton"
 		style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
-		android:layout_width="0dp"
+		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:layout_marginStart="16dp"
 		android:layout_marginTop="8dp"
