--- a/feature.wishes/src/main/res/layout/wish_edit_fragment.xml
+++ b/feature.wishes/src/main/res/layout/wish_edit_fragment.xml
@@ -1,123 +1,122 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
 	android:id="@+id/root"
 	android:layout_width="match_parent"
-	android:layout_height="match_parent">
+	android:layout_height="match_parent"
+	android:orientation="vertical">
 
-	<TextView
-		android:id="@+id/textMainInfoBlock"
-		style="@style/Material.Text.Colored"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:layout_marginStart="16dp"
-		android:layout_marginTop="16dp"
-		android:text="Основная информация"
-		app:layout_constraintStart_toStartOf="parent"
-		app:layout_constraintTop_toTopOf="parent" />
+	<ScrollView
+		android:layout_width="match_parent"
+		android:layout_height="0dp"
+		android:layout_weight="1">
 
-	<com.google.android.material.textfield.TextInputLayout
-		android:id="@+id/input_name_layout"
-		style="@style/Material.InputTextLayout.Outlined"
-		android:layout_width="0dp"
-		android:layout_height="wrap_content"
-		android:layout_marginStart="16dp"
-		android:layout_marginTop="8dp"
-		android:layout_marginEnd="16dp"
-		app:counterEnabled="true"
-		app:counterMaxLength="40"
-		app:errorEnabled="true"
-		app:layout_constraintEnd_toEndOf="parent"
-		app:layout_constraintStart_toStartOf="parent"
-		app:layout_constraintTop_toBottomOf="@+id/textMainInfoBlock">
-
-		<com.google.android.material.textfield.TextInputEditText
-			android:id="@+id/input_name"
+		<LinearLayout
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
-			android:hint="Введите мечту" />
-	</com.google.android.material.textfield.TextInputLayout>
+			android:orientation="vertical">
 
-	<com.google.android.material.textfield.TextInputLayout
-		android:id="@+id/input_info_layout"
-		style="@style/Material.InputTextLayout.Outlined"
-		android:layout_width="0dp"
-		android:layout_height="wrap_content"
-		android:layout_marginStart="16dp"
-		android:layout_marginTop="8dp"
-		android:layout_marginEnd="16dp"
-		app:layout_constraintEnd_toEndOf="parent"
-		app:layout_constraintStart_toStartOf="parent"
-		app:layout_constraintTop_toBottomOf="@id/input_name_layout">
+			<TextView
+				android:id="@+id/textMainInfoBlock"
+				style="@style/Material.Text.Colored"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:layout_marginStart="16dp"
+				android:layout_marginTop="16dp"
+				android:text="Основная информация" />
 
-		<com.google.android.material.textfield.TextInputEditText
-			android:id="@+id/input_info"
-			android:layout_width="match_parent"
-			android:layout_height="wrap_content"
-			android:hint="Опишите мечту" />
-	</com.google.android.material.textfield.TextInputLayout>
+			<com.google.android.material.textfield.TextInputLayout
+				android:id="@+id/input_name_layout"
+				style="@style/Material.InputTextLayout.Outlined"
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:layout_marginStart="16dp"
+				android:layout_marginTop="8dp"
+				android:layout_marginEnd="16dp"
+				app:counterEnabled="true"
+				app:counterMaxLength="40"
+				app:errorEnabled="true">
 
-	<TextView
-		android:id="@+id/textDetailInfoBlock"
-		style="@style/Material.Text.Colored"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:layout_marginStart="16dp"
-		android:layout_marginTop="16dp"
-		android:text="Детали"
-		app:layout_constraintStart_toStartOf="parent"
-		app:layout_constraintTop_toBottomOf="@id/input_info_layout" />
+				<com.google.android.material.textfield.TextInputEditText
+					android:id="@+id/input_name"
+					android:layout_width="match_parent"
+					android:layout_height="wrap_content"
+					android:hint="Введите мечту" />
+			</com.google.android.material.textfield.TextInputLayout>
 
-	<com.google.android.material.textfield.TextInputLayout
-		android:id="@+id/input_cost_layout"
-		style="@style/Material.InputTextLayout.Outlined"
-		android:layout_width="0dp"
-		android:layout_height="wrap_content"
-		android:layout_marginStart="16dp"
-		android:layout_marginTop="8dp"
-		android:layout_marginEnd="16dp"
-		app:errorEnabled="true"
-		app:layout_constraintEnd_toEndOf="parent"
-		app:layout_constraintStart_toStartOf="parent"
-		app:layout_constraintTop_toBottomOf="@+id/textDetailInfoBlock">
+			<com.google.android.material.textfield.TextInputLayout
+				android:id="@+id/input_info_layout"
+				style="@style/Material.InputTextLayout.Outlined"
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:layout_marginStart="16dp"
+				android:layout_marginTop="8dp"
+				android:layout_marginEnd="16dp">
 
-		<com.google.android.material.textfield.TextInputEditText
-			android:id="@+id/input_cost"
-			android:layout_width="match_parent"
-			android:layout_height="wrap_content"
-			android:hint="Цена"
-			android:inputType="number" />
-	</com.google.android.material.textfield.TextInputLayout>
+				<com.google.android.material.textfield.TextInputEditText
+					android:id="@+id/input_info"
+					android:layout_width="match_parent"
+					android:layout_height="wrap_content"
+					android:hint="Опишите мечту" />
+			</com.google.android.material.textfield.TextInputLayout>
 
-	<com.google.android.material.textfield.TextInputLayout
-		android:id="@+id/input_important_layout"
-		style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
-		android:layout_width="0dp"
-		android:layout_height="wrap_content"
-		android:layout_marginStart="16dp"
-		android:layout_marginTop="8dp"
-		android:layout_marginEnd="16dp"
-		app:errorEnabled="true"
-		app:layout_constraintEnd_toEndOf="parent"
-		app:layout_constraintStart_toStartOf="parent"
-		app:layout_constraintTop_toBottomOf="@+id/input_cost_layout">
+			<TextView
+				android:id="@+id/textDetailInfoBlock"
+				style="@style/Material.Text.Colored"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:layout_marginStart="16dp"
+				android:layout_marginTop="16dp"
+				android:text="Детали" />
 
-		<AutoCompleteTextView
-			android:id="@+id/input_important"
-			android:layout_width="match_parent"
-			android:layout_height="wrap_content"
-			android:editable="false"
-			android:hint="Важность" />
-	</com.google.android.material.textfield.TextInputLayout>
+			<com.google.android.material.textfield.TextInputLayout
+				android:id="@+id/input_cost_layout"
+				style="@style/Material.InputTextLayout.Outlined"
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:layout_marginStart="16dp"
+				android:layout_marginTop="8dp"
+				android:layout_marginEnd="16dp"
+				app:errorEnabled="true">
+
+				<com.google.android.material.textfield.TextInputEditText
+					android:id="@+id/input_cost"
+					android:layout_width="match_parent"
+					android:layout_height="wrap_content"
+					android:hint="Цена"
+					android:inputType="number" />
+			</com.google.android.material.textfield.TextInputLayout>
+
+			<com.google.android.material.textfield.TextInputLayout
+				android:id="@+id/input_important_layout"
+				style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:layout_marginStart="16dp"
+				android:layout_marginTop="8dp"
+				android:layout_marginEnd="16dp"
+				app:errorEnabled="true">
+
+				<AutoCompleteTextView
+					android:id="@+id/input_important"
+					android:layout_width="match_parent"
+					android:layout_height="wrap_content"
+					android:editable="false"
+					android:hint="Важность" />
+			</com.google.android.material.textfield.TextInputLayout>
+		</LinearLayout>
+
+	</ScrollView>
 
 	<Button
 		android:id="@+id/apply"
-		android:layout_width="wrap_content"
+		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
-		android:layout_marginTop="24dp"
-		android:text="Создать"
-		app:layout_constraintEnd_toEndOf="parent"
-		app:layout_constraintStart_toStartOf="parent"
-		app:layout_constraintTop_toBottomOf="@+id/input_important_layout" />
+		android:layout_marginStart="16dp"
+		android:layout_marginEnd="16dp"
+		android:layout_marginBottom="8dp"
+		android:padding="16dp"
+		android:layout_weight="0"
+		android:text="Создать" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
