[feature-wishes] Поменял некоторые иконки

--- a/feature.wishes/src/main/res/layout/wish_fragment_list.xml
+++ b/feature.wishes/src/main/res/layout/wish_fragment_list.xml
@@ -17,7 +17,7 @@
 		android:layout_height="wrap_content"
 		android:layout_gravity="end|bottom"
 		android:layout_margin="16dp"
-		android:src="@drawable/note_add_24px"
+		android:src="@drawable/add_24px"
 		app:elevation="6dp"
 		app:tint="#EEE" />
 
