--- a/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
@@ -2,33 +2,60 @@
     xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path
-        android:fillType="evenOdd"
-        android:pathData="M32,64C32,64 38.39,52.99 44.13,50.95C51.37,48.37 70.14,49.57 70.14,49.57L108.26,87.69L108,109.01L75.97,107.97L32,64Z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="78.5885"
-                android:endY="90.9159"
-                android:startX="48.7653"
-                android:startY="61.0927"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
-    <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M66.94,46.02L66.94,46.02C72.44,50.07 76,56.61 76,64L32,64C32,56.61 35.56,50.11 40.98,46.06L36.18,41.19C35.45,40.45 35.45,39.3 36.18,38.56C36.91,37.81 38.05,37.81 38.78,38.56L44.25,44.05C47.18,42.57 50.48,41.71 54,41.71C57.48,41.71 60.78,42.57 63.68,44.05L69.11,38.56C69.84,37.81 70.98,37.81 71.71,38.56C72.44,39.3 72.44,40.45 71.71,41.19L66.94,46.02ZM62.94,56.92C64.08,56.92 65,56.01 65,54.88C65,53.76 64.08,52.85 62.94,52.85C61.8,52.85 60.88,53.76 60.88,54.88C60.88,56.01 61.8,56.92 62.94,56.92ZM45.06,56.92C46.2,56.92 47.13,56.01 47.13,54.88C47.13,53.76 46.2,52.85 45.06,52.85C43.92,52.85 43,53.76 43,54.88C43,56.01 43.92,56.92 45.06,56.92Z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+    android:viewportWidth="152.11267"
+    android:viewportHeight="152.11267">
+    <group
+        android:translateX="22.056337"
+        android:translateY="22.056337">
+
+        <path
+            android:name="shadow"
+            android:fillType="evenOdd"
+            android:pathData="m74 22 77 77 -52 52 -66 -66 41 -63z"
+            android:strokeWidth="1"
+            android:strokeColor="#00000000">
+
+            <aapt:attr name="android:fillColor">
+                <gradient
+                    android:endX="78.5885"
+                    android:endY="90.9159"
+                    android:startX="48.7653"
+                    android:startY="61.0927"
+                    android:type="linear">
+                    <item
+                        android:color="#44000000"
+                        android:offset="0.0" />
+                    <item
+                        android:color="#00000000"
+                        android:offset="1.0" />
+                </gradient>
+            </aapt:attr>
+        </path>
+
+        <path
+            android:name="background_layer"
+            android:fillColor="#3eb48a"
+            android:pathData="m34.83 21.87h38.61c0.75 0 1.35 0.6 1.35 1.35v59.8c0 0.75 -0.6 1.35 -1.35 1.35h-38.61c-0.75 0 -1.35 -0.6 -1.35 -1.35v-59.8c0 -0.75 0.6 -1.35 1.35 -1.35z" />
+        <path
+            android:name="contour_layer"
+            android:fillColor="#fff"
+            android:pathData="m73.71 22.81v61.02h-39.42v-61.02zm-39.96 -1.89c-0.75 0 -1.35 0.6 -1.35 1.35v62.1c0 0.75 0.6 1.35 1.35 1.35h40.5c0.75 0 1.35 -0.6 1.35 -1.35v-62.1c0 -0.75 -0.6 -1.35 -1.35 -1.35z" />
+        <path
+            android:name="task1_layer"
+            android:fillColor="#fff"
+            android:pathData="m40.23 31.59c0 0 0 0 0 0c0 0 0 0 0 -0zm5.94 0c0 0 0 0 0 0c0 0 0 0 0 0zm5.53 -0c-0.22 0 -0.41 0.18 -0.41 0.41v0.54c0 0.22 0.18 0.4 0.41 0.4h16.47c0.22 0 0.41 -0.18 0.41 -0.4v-0.54c0 -0.22 -0.18 -0.41 -0.41 -0.41zm-5.53 5.94c0 0 0 0 -0 0c0 0 0 0 0 0zm-5.94 -5.94c0 0 0 0 0 0h5.94c0 0 0 0 0 0v5.94c0 0 0 0 -0 0h-5.94v-5.94c0 0 0 0 0 0c0 0 0 0 0 0c0 0 0 0 0 0zm11.48 4.59c-0.22 0 -0.41 0.18 -0.41 0.4v0.54c0 0.22 0.18 0.4 0.41 0.4h16.47c0.22 0 0.41 -0.18 0.41 -0.4v-0.54c0 -0.22 -0.18 -0.4 -0.41 -0.4zm-11.48 -5.94c-0.75 0 -1.35 0.6 -1.35 1.35v5.94c0 0.75 0.6 1.35 1.35 1.35h5.94c0.75 0 1.35 -0.6 1.35 -1.35v-5.94c0 -0.75 -0.6 -1.35 -1.35 -1.35z" />
+        <path
+            android:name="task2_layer"
+            android:fillColor="#fff"
+            android:pathData="m51.97 45.09c-0.22 0 -0.41 0.18 -0.41 0.41v0.54c0 0.22 0.18 0.4 0.41 0.4h16.47c0.22 0 0.41 -0.18 0.41 -0.4v-0.54c0 -0.22 -0.18 -0.41 -0.41 -0.41zm-11.48 5.94c0 0 0 0 0 0c-0 0 -0 0 -0 0zm5.94 0c0 0 0 0 -0 0c0 0 0 0 0 0zm-0 -5.94c0 0 0 0 0 0v5.94c0 0 -0 0 -0 0h-5.94c-0 0 -0 0 -0 0v-5.94c0 -0 0 -0 0 -0zm5.54 4.59c-0.22 0 -0.41 0.18 -0.41 0.4v0.54c0 0.22 0.18 0.4 0.41 0.4h16.47c0.22 0 0.41 -0.18 0.41 -0.4v-0.54c0 -0.22 -0.18 -0.4 -0.41 -0.4zm-11.47 -5.94c-0.75 0 -1.35 0.6 -1.35 1.35v5.94c0 0.75 0.6 1.35 1.35 1.35h5.94c0.75 0 1.35 -0.6 1.35 -1.35v-5.94c0 -0.75 -0.6 -1.35 -1.35 -1.35z" />
+        <path
+            android:name="task3_layer"
+            android:fillColor="#fff"
+            android:pathData="m51.97 58.59c-0.22 0 -0.41 0.18 -0.41 0.41v0.54c0 0.22 0.18 0.4 0.41 0.4h16.47c0.22 0 0.41 -0.18 0.41 -0.4v-0.54c0 -0.22 -0.18 -0.41 -0.41 -0.41zm-11.48 5.94c0 0 0 0 0 0c-0 0 -0 0 -0 0zm5.94 0c0 0 0 0 -0 0c0 -0 0 -0 0 -0zm-0 -5.94c0 0 0 0 0 0v5.94c0 0 -0 0 -0 0h-5.94c-0 0 -0 0 -0 -0v-5.94c0 -0 0 -0 0 -0zm5.54 4.59c-0.22 0 -0.41 0.18 -0.41 0.4v0.54c0 0.22 0.18 0.4 0.41 0.4h16.47c0.22 0 0.41 -0.18 0.41 -0.4v-0.54c0 -0.22 -0.18 -0.4 -0.41 -0.4zm-11.47 -5.94c-0.75 0 -1.35 0.6 -1.35 1.35v5.94c0 0.75 0.6 1.35 1.35 1.35h5.94c0.75 0 1.35 -0.6 1.35 -1.35v-5.94c0 -0.75 -0.6 -1.35 -1.35 -1.35z" />
+        <path
+            android:name="Question"
+            android:fillColor="#fff"
+            android:pathData="m43.46 33.74c0.14 -0.15 0.19 -0.34 0.2 -0.48c0.01 -0.19 -0.03 -0.51 0.6 -0.91c1.53 -0.99 2.49 -1.7 2.94 -2.22c0.11 -0.12 1.88 -3.94 -2.77 -2.68c-2.53 0.69 -3.24 1.66 -3.23 1.64c-0.3 0.39 0.09 0.65 0.32 0.72c0.4 0.12 0.98 -0.43 1.71 -0.81c0.31 -0.16 1.52 -0.61 1.83 -0.67c1.2 -0.25 1.26 0.04 1.36 0.32c0.29 0.8 -0.67 1.17 -3.22 3.04c-0.07 0.06 -0.64 0.47 -0.65 0.93c-0.05 1.5 0.8 1.19 0.9 1.12zm-0.59 1.16c-1.29 0 -1.17 1.52 -1.17 1.15c0 -0.24 -0.11 0.82 0.82 0.82c-0.38 0 1.15 0.13 1.15 -1.12c0 0.24 0.11 -0.85 -0.8 -0.85z" />
+
+    </group>
 </vector>
