[refactor] Перенес фичу с редактированием желания в отдельный модуль

--- a/feature-wish-detail/src/main/res/layout/wish_edit_fragment.xml
+++ b/feature-wish-detail/src/main/res/layout/wish_edit_fragment.xml
@@ -109,7 +109,7 @@
 	</ScrollView>
 
 	<Button
-		android:id="@+id/apply"
+		android:id="@+id/apply_button"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
 		android:layout_marginStart="16dp"
