--- a/feature.stub/src/main/res/values/string.xml
+++ b/feature.stub/src/main/res/values/string.xml
@@ -1,11 +1,2 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
-	<string name="noDesireTitle">Добрый день!</string>
-	<string name="noDesireDescriptor">Добавьте свое первое желание</string>
-	<string name="noDesireMainButton">Добавить первое желание</string>
-
-	<string name="wishesFulfilledTitle">Поздравляю, все желания исполнены!</string>
-	<string name="wishesFulfilledDescriptor">Наверняка у вас остались цели в жизни, можете их добавить в список</string>
-	<string name="wishesFulfilledMainButton">Добавить</string>
-	<string name="wishesFulfilledSecondButton">Что я уже сделал?</string>
-</resources>
+<resources></resources>
