[compose] Подготовил CompletedWishesFragment.kt для полноценной миграции на Jetpack Compose

--- a/feature.wishes-completed/src/main/res/values/string.xml
+++ b/feature.wishes-completed/src/main/res/values/string.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+	<string name="completed_list_title">Завершенные</string>
+
 	<string name="noCompletedTitle">Эх :(</string>
 	<string name="noCompletedDescriptor">Вы еще ничего не выполнили. Перейдите в раздел списка желаний и отметите то желание, которое вы уже исполнили</string>
 </resources>
